--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello Gomycode</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, quisquam harum ut vero corrupti expedita alias repellendus recusandae voluptatem exercitationem.</p>
     <script src="./main.js"></script>
 </body>
